# dsbmm-bp

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: black.yml  workflow.yml
figures/: annot_hier_2018
notebooks/: basics.ipynb  itractv_plots.ipynb
results/: align_init_times.pkl  align_test_aris.pkl  align_test_times.pkl  default_test_aris.pkl  default_test_times.pkl  og_test_aris.pkl  og_test_times.pkl  scopus_Z.pkl
src/dsbmm-bp/: apply.py
src/dsbmm_bp/: alignment_tests.sh  apply.py  base.py  bp.py  bp_base.py  bp_sparse.py  bp_sparse_parallel.py  config.yaml  data_processer.py  data_processor.py  dsbmm.py  dsbmm_base.py  dsbmm_sparse.py  dsbmm_sparse_parallel.py  em.py  greedy.py  hard_toy_tests.sh  np_par_bp_methods.py  np_par_dsbmm_methods.py  numba_bp_methods.py  numba_dsbmm_methods.py  old.py  pmeta_hard_toy_tests.sh  pmeta_toy_tests.sh  simulation.py  toy_apply.py  toy_proc.txt  toy_tests.sh  umeta_hard_toy_tests.sh  umeta_toy_tests.sh  unif_hard_toy_tests.sh  unif_toy_tests.sh  utils.py
