[tool.poetry]
name = "dsbmm-bp"
version = "0.1.0"
description = "Dynamic SBM for temporal networks with metadata, inferred through belief propagation"
authors = ["John Fitzgerald <j.a.fitzgerald@outlook.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
numpy = "^1.22.3"
numba = "^0.55.1"
scipy = "^1.8.0"
matplotlib = "^3.5.2"
scikit-learn = "^1.0.2"
csr = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
