[metadata]
name = dsbmm_bp
version = 0.0.1
author = John Fitzgerald
author_email = j.a.fitzgerald@outlook.com
description = Dynamic SBMs with metadata, fitted using belief propagation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fitzgeraldja/dsbmm-bp
project_urls =
    Bug Tracker = https://github.com/fitzgeraldja/dsbmm-bp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src